--- a/csharp/GameOfLife/GameOfLife.csproj
+++ b/csharp/GameOfLife/GameOfLife.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Neighborhoods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rules.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
